# synapso-api

./: README.md  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: package_publish.yml
src/: main.py
src/routes/: cortex.py  query.py
src/synapso_api/: __init__.py  main.py  models.py
src/synapso_api/routes/: cortex.py  query.py  system.py
